[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generator with support for perfect and random mazes"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "ncontrem"},
    {name = "efoyer"}
]

[tool.setuptools]
packages = ["Maze"]